Included Codepen Links. Updated styles

--- a/public/index.html
+++ b/public/index.html
@@ -89,52 +89,52 @@
 					<h2 class="news-heading">Latest Updates</h2>
 					<div class="news-content fx">
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span>31 JUL 2015</span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">https://www.google.com/?gws_rd=ssl#q=adrian</a>
+								<a href="adrian.html#/projects/adrian-com">Website Redesign</a>
+								<a href="#">adrian.html#/projects/adrian-com</a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p>Modernized and in motion, I'm pleased to announce my website redesign which incorporates some pretty neat CSS3 and Javascript animations.</p>
 						</article>
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span>20 JUL 2015</span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">click me</a>
+								<a href="http://codepen.io/Adriansan/pen/EjrQRw">Intro Animation Screen</a>
+								<a href="http://codepen.io/Adriansan/pen/EjrQRw">http://codepen.io/Adriansan/pen/EjrQRw</a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p>A codepen on the intro animation splash screen for this site made entirely using CSS3 animations and basic Javascript. Feel free to use it.</p>
 						</article>
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span>3 MAY 2015</span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">click me</a>
+								<a href="http://codepen.io/Adriansan/pen/vObQaO">Basic CSS3 Animation Codepen</a>
+								<a href="#">http://codepen.io/Adriansan/pen/vObQaO</a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p>Animations can breath new life into a web experience. It's easier than it sounds. Check out my example.</p>
 						</article>
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span>1 MAY 2015</span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">click me</a>
+								<a href="http://codepen.io/Adriansan/pen/QbYomg">Animation Looper</a>
+								<a href="#">http://codepen.io/Adriansan/pen/QbYomg</a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p>The requestAnimationFrame() method tells the browser that you wish to perform an animation and requests that the browser call a specified function to update an animation. <a href="http://codepen.io/Adriansan/pen/QbYomg">See a demo</a></p>
 						</article>
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span>29 APR 2015</span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">click me</a>
+								<a href="http://codepen.io/Adriansan/pen/WvPWNd">SVG In Motion</a>
+								<a href="#">http://codepen.io/Adriansan/pen/WvPWNd</a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p>Animating an SVG path is an great way to add very interesting effects to any design. The easiest way to animate SVG is using CSS animations or transitions.</p>
 						</article>
 						<article class="fx">
-							<span>16TH JUN 2015</span>
+							<span></span>
 							<h3>
-								<a href="#">SVG New effect</a>
-								<a href="">click me</a>
+								<a href="#"></a>
+								<a href=""></a>
 							</h3>							
-							<p>I chatted about SVG and web animation in general with Rob Levin on his podcast SVG Immersion</p>
+							<p></p>
 						</article>																								
 					</div>
 				</div>
@@ -300,6 +300,7 @@
 </script>
 </body>
 </html>
+
 
 
 
