Updated selected works first panel

--- a/public/index.html
+++ b/public/index.html
@@ -92,39 +92,39 @@
 							<span>31 JUL 2015</span>
 							<h3>
 								<a href="adrian.html#/projects/adrian-com">Website Redesign</a>
-								<a href="#">adrian.html#/projects/adrian-com</a>
+								<a href="adrian.html#/projects/adrian-com">adrian.html#/projects/adrian-com</a>
 							</h3>							
 							<p>Modernized and in motion, I'm pleased to announce my website redesign which incorporates some pretty neat CSS3 and Javascript animations.</p>
 						</article>
 						<article class="fx">
 							<span>20 JUL 2015</span>
 							<h3>
-								<a href="http://codepen.io/Adriansan/pen/EjrQRw">Intro Animation Screen</a>
-								<a href="http://codepen.io/Adriansan/pen/EjrQRw">http://codepen.io/Adriansan/pen/EjrQRw</a>
+								<a href="http://codepen.io/Adriansan/pen/EjrQRw/left/">Intro Animation Screen</a>
+								<a href="http://codepen.io/Adriansan/pen/EjrQRw/left/">http://codepen.io/Adriansan/pen/EjrQRw</a>
 							</h3>							
 							<p>A codepen on the intro animation splash screen for this site made entirely using CSS3 animations and basic Javascript. Feel free to use it.</p>
 						</article>
 						<article class="fx">
 							<span>3 MAY 2015</span>
 							<h3>
-								<a href="http://codepen.io/Adriansan/pen/vObQaO">Basic CSS3 Animation Codepen</a>
-								<a href="#">http://codepen.io/Adriansan/pen/vObQaO</a>
+								<a href="http://codepen.io/Adriansan/pen/vObQaO/left/">Basic CSS3 Animation Codepen</a>
+								<a href="http://codepen.io/Adriansan/pen/vObQaO/left/">http://codepen.io/Adriansan/pen/vObQaO</a>
 							</h3>							
-							<p>Animations can breath new life into a web experience. It's easier than it sounds. Check out my example.</p>
+							<p>Animations can breath new life into a web experience. It's easier than it sounds. Check out my demo of a rotating ball that follows each mouse click. </p>
 						</article>
 						<article class="fx">
 							<span>1 MAY 2015</span>
 							<h3>
-								<a href="http://codepen.io/Adriansan/pen/QbYomg">Animation Looper</a>
-								<a href="#">http://codepen.io/Adriansan/pen/QbYomg</a>
+								<a href="http://codepen.io/Adriansan/pen/QbYomg/left/">Animation Looper</a>
+								<a href="http://codepen.io/Adriansan/pen/QbYomg/left/">http://codepen.io/Adriansan/pen/QbYomg</a>
 							</h3>							
-							<p>The requestAnimationFrame() method tells the browser that you wish to perform an animation and requests that the browser call a specified function to update an animation. <a href="http://codepen.io/Adriansan/pen/QbYomg">See a demo</a></p>
+							<p>The requestAnimationFrame() method tells the browser that you wish to perform an animation and requests that the browser call a specified function to update an animation.</p>
 						</article>
 						<article class="fx">
 							<span>29 APR 2015</span>
 							<h3>
-								<a href="http://codepen.io/Adriansan/pen/WvPWNd">SVG In Motion</a>
-								<a href="#">http://codepen.io/Adriansan/pen/WvPWNd</a>
+								<a href="http://codepen.io/Adriansan/pen/WvPWNd/left/">SVG In Motion</a>
+								<a href="http://codepen.io/Adriansan/pen/WvPWNd/left/">http://codepen.io/Adriansan/pen/WvPWNd</a>
 							</h3>							
 							<p>Animating an SVG path is an great way to add very interesting effects to any design. The easiest way to animate SVG is using CSS animations or transitions.</p>
 						</article>
@@ -195,34 +195,34 @@
 					<p class="divider-line"><span></span></p>
 				</header> 
 				<div class="wrapper">
-					<a href="#" class="project">						
+					<a href="adrian.html#/projects/hurricane-interactive" class="project">						
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox News Digital</p>
+								<p class="ch0 fx">Hurricane Intensity</p>
+								<p class="ch1 fx">Fox News Digital</p>
 								<div class="fx-hover"></div>
 							</figcaption>
 							<img src="assets/img/featured-hurricane.jpg" class="fx">
 						</figure>
 					</a>
-					<a href="#" class="project">
+					<a href="adrian.html#/projects/sap-hero" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch0 fx"> Hero Redesign</p>
+								<p class="ch1 fx">SAP of America</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/sap-hero.jpg" class="fx">
 						</figure>
 					</a>
-					<a href="#" class="project">
+					<a href="adrian.html#/projects/fox-infrastructure" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch0 fx">Infrastructure</p>
+								<p class="ch1 fx">Fox Business Network</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/featured-infrastructure.jpg" class="fx">
 						</figure>
 					</a>
 				</div>
@@ -300,338 +300,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
