Updated Selected works images & styles

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
 						<figure>
 							<figcaption>
 								<p class="ch0 fx"> Hero Redesign</p>
-								<p class="ch1 fx">SAP of America</p>
+								<p class="ch1 fx">SAP</p>
 								<div class="fx-hover"></div>
 							</figcaption>
 							<img src="assets/img/sap-hero.jpg" class="fx">
@@ -230,31 +230,31 @@
 					<a href="#" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch0 fx">New WCMS Experience</p>
+								<p class="ch1 fx">SAP Marketing</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/sap-cq5.jpg" class="first-row2 fx">
 						</figure>
 					</a>
 					<a href="#" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch0 fx">Adobe CQ5 WCMS</p>
+								<p class="ch1 fx">SAP Marketing</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/featured-widgets.jpg" class="fx">
 						</figure>
 					</a>
 					<a href="#" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch0 fx"> </p>
+								<p class="ch1 fx"> </p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/featured-elections.jpg" class="last fx">
 						</figure>
 					</a>
 				</div>
@@ -300,6 +300,7 @@
 </script>
 </body>
 </html>
+
 
 
 
