Updated Selected Works. Pushed new data

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
 								<p class="ch1 fx">Fox News Digital</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/featured-hurricane.jpg" class="fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/featured-hurricane.jpg" class="fx">
 						</figure>
 					</a>
 					<a href="adrian.html#/projects/sap-hero" class="project">
@@ -212,7 +212,7 @@
 								<p class="ch1 fx">SAP</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/sap-hero.jpg" class="fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/sap-hero.jpg" class="fx">
 						</figure>
 					</a>
 					<a href="adrian.html#/projects/fox-infrastructure" class="project">
@@ -222,39 +222,39 @@
 								<p class="ch1 fx">Fox Business Network</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/featured-infrastructure.jpg" class="fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/featured-infrastructure.jpg" class="fx">
 						</figure>
 					</a>
 				</div>
 				<div id="jsContactTrigger" class="wrapper">
-					<a href="#" class="project">
+					<a href="adrian.html#/projects/sap-wcms" class="project">
 						<figure>
 							<figcaption>
 								<p class="ch0 fx">New WCMS Experience</p>
 								<p class="ch1 fx">SAP Marketing</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/sap-cq5.jpg" class="first-row2 fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/sap-cq5.jpg" class="first-row2 fx">
 						</figure>
 					</a>
-					<a href="#" class="project">
+					<a href="adrian.html#/projects/sap-widgets" class="project">
 						<figure>
 							<figcaption>
 								<p class="ch0 fx">Adobe CQ5 WCMS</p>
 								<p class="ch1 fx">SAP Marketing</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/featured-widgets.jpg" class="fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/featured-widgets.jpg" class="fx">
 						</figure>
 					</a>
-					<a href="#" class="project">
+					<a href="adrian.html#/projects/fox-elections" class="project">
 						<figure>
 							<figcaption>
 								<p class="ch0 fx"> </p>
 								<p class="ch1 fx"> </p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="assets/img/featured-elections.jpg" class="last fx">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/featured-elections.jpg" class="last fx">
 						</figure>
 					</a>
 				</div>
