CSS Transform & SkewY properties updates

--- a/public/index.html
+++ b/public/index.html
@@ -250,11 +250,11 @@
 					<a href="adrian.html#/projects/fox-elections" class="project">
 						<figure>
 							<figcaption>
-								<p class="ch0 fx"> </p>
-								<p class="ch1 fx"> </p>
+								<p class="ch0 fx">.</p>
+								<p class="ch1 fx">From the Archives</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/featured-elections.jpg" class="last fx">
+							<img src="assets/img/featured-elections.jpg" class="last fx">
 						</figure>
 					</a>
 				</div>
@@ -300,6 +300,7 @@
 </script>
 </body>
 </html>
+
 
 
 
